deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: NAMESPACE
  name: IMAGE_NAME
spec:
  minReadySeconds: 5
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 10%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: IMAGE_NAME
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: IMAGE_NAME
    spec:
      containers:
      - image: AWS_ECR_HOST/IMAGE_NAME:TAG
        imagePullPolicy: Always
        name: IMAGE_NAME
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /login
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /login
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  name: service-IMAGE_NAME
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: IMAGE_NAME

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: NAMESPACE
  name: st-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: www.st.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-IMAGE_NAME
              port:
                number: 80
